--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
+    "bootstrap": "^4.1.1",
+    "mdbreact": "^5.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-popper": "^0.9.2",
+    "react-responsive-carousel": "^3.2.13",
     "react-scripts": "4.0.3",
+    "reactstrap": "^5.0.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
