--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mdbreact": "^5.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-google-calendar-api": "^1.3.1",
     "react-popper": "^0.9.2",
     "react-responsive-carousel": "^3.2.13",
     "react-scripts": "4.0.3",
